logs/object_cloud/build.make.004.log.stderr
In file included from /usr/include/c++/4.8/backward/strstream:51:0,
                 from /usr/include/vtk-5.8/vtkIOStream.h:112,
                 from /usr/include/vtk-5.8/vtkSystemIncludes.h:40,
                 from /usr/include/vtk-5.8/vtkIndent.h:24,
                 from /usr/include/vtk-5.8/vtkObjectBase.h:43,
                 from /usr/include/vtk-5.8/vtkSmartPointerBase.h:26,
                 from /usr/include/vtk-5.8/vtkSmartPointer.h:23,
                 from /usr/include/pcl-1.7/pcl/visualization/point_cloud_geometry_handlers.h:48,
                 from /usr/include/pcl-1.7/pcl/visualization/point_cloud_handlers.h:41,
                 from /usr/include/pcl-1.7/pcl/visualization/common/actor_map.h:40,
                 from /usr/include/pcl-1.7/pcl/visualization/pcl_visualizer.h:47,
                 from /usr/include/pcl-1.7/pcl/visualization/cloud_viewer.h:39,
                 from /home/dan/dan_ws/src/object_cloud/src/object_cloud_node.cpp:8:
/usr/include/c++/4.8/backward/backward_warning.h:32:2: warning: #warning This file includes at least one deprecated or antiquated header which may be removed without further notice at a future date. Please use a non-deprecated interface with equivalent functionality instead. For a listing of replacement headers and interfaces, consult the file backward_warning.h. To disable this warning use -Wno-deprecated. [-Wcpp]
 #warning \
  ^
/home/dan/dan_ws/src/object_cloud/src/object_cloud_node.cpp: In function ‘pclCloud segment(pcl::PointCloud<pcl::PointXYZRGB>::Ptr)’:
/home/dan/dan_ws/src/object_cloud/src/object_cloud_node.cpp:81:39: error: redeclaration of ‘pcl::PassThrough<pcl::PointXYZRGB> pass’
    pcl::PassThrough<pcl::PointXYZRGB> pass;
                                       ^
/home/dan/dan_ws/src/object_cloud/src/object_cloud_node.cpp:56:41: error: ‘pcl::PassThrough<pcl::PointXYZRGB> pass’ previously declared here
      pcl::PassThrough<pcl::PointXYZRGB> pass;
                                         ^
/home/dan/dan_ws/src/object_cloud/src/object_cloud_node.cpp: In function ‘void detections_cb(const ConstPtr&)’:
/home/dan/dan_ws/src/object_cloud/src/object_cloud_node.cpp:117:27: error: base operand of ‘->’ has non-pointer type ‘pclCloud {aka pcl::PointCloud<pcl::PointXYZRGB>}’
                  if (cloud->at(x, y).rgba != filteredOutColor) {
                           ^
/home/dan/dan_ws/src/object_cloud/src/object_cloud_node.cpp:118:43: error: base operand of ‘->’ has non-pointer type ‘pclCloud {aka pcl::PointCloud<pcl::PointXYZRGB>}’
                      colorSet.insert(cloud->at(x, y).rgba);
                                           ^
/home/dan/dan_ws/src/object_cloud/src/object_cloud_node.cpp:119:46: error: base operand of ‘->’ has non-pointer type ‘pclCloud {aka pcl::PointCloud<pcl::PointXYZRGB>}’
                      colorVec.push_back(cloud->at(x, y).rgba);
                                              ^
/home/dan/dan_ws/src/object_cloud/src/object_cloud_node.cpp:136:46: error: base operand of ‘->’ has non-pointer type ‘pclCloud {aka pcl::PointCloud<pcl::PointXYZRGB>}’
                  if (mostCommonColor == cloud->at(xPos, yPos).rgba)
                                              ^
/home/dan/dan_ws/src/object_cloud/src/object_cloud_node.cpp:137:44: error: base operand of ‘->’ has non-pointer type ‘pclCloud {aka pcl::PointCloud<pcl::PointXYZRGB>}’
                      output.push_back(cloud->at(xPos, yPos));
                                            ^
/home/dan/dan_ws/src/object_cloud/src/object_cloud_node.cpp:144:1: error: a function-definition is not allowed here before ‘{’ token
 {
 ^
/home/dan/dan_ws/src/object_cloud/src/object_cloud_node.cpp:154:1: error: expected ‘}’ at end of input
 }
 ^
make[2]: *** [CMakeFiles/object_cloud_node.dir/src/object_cloud_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/object_cloud_node.dir/all] Error 2
make: *** [all] Error 2
